syntax = "proto3";
option go_package = "./grpc/proto;gproto";   //新版本的protoc和protobuf这里应该写成 option go_package = "../proto";
service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
